--- a/env/includes/settings/tk-multi-publish2.yml
+++ b/env/includes/settings/tk-multi-publish2.yml
@@ -178,9 +178,15 @@ settings.tk-multi-publish2.maya.asset_step:
     settings:
         Publish Template: maya_asset_publish
   - name: Publish to Shotgun
-    hook: "{self}/publish_file.py:{engine}/tk-multi-publish2/basic/publish_session_geometry.py"
+    hook: "{self}/publish_file.py:{config}/tk-multi-publish2/tk-maya/basic/publish_fbx.py"
     settings:
-        Publish Template: asset_alembic_cache
+        Work Template: maya_asset_fbx_export
+        Publish Template: maya_asset_fbx_publish
+  - name: Render Turntable in UE4
+    hook: "{self}/publish_file.py:{config}/tk-multi-publish2/tk-maya/basic/publish_turntable.py"
+    settings:
+        Work Template: maya_ue4_turntable_render
+        Publish Template: maya_ue4_turntable_publish
   help_url: *help_url
   location: "@apps.tk-multi-publish2.location"
 
@@ -391,4 +397,33 @@ settings.tk-multi-publish2.motion_builder.shot_step:
   help_url: *help_url
   location: "@apps.tk-multi-publish2.location"
 
+################################################################################
 
+# ---- Unreal
+
+# project
+settings.tk-multi-publish2.unreal.project:
+  collector: "{self}/collector.py:{engine}/tk-multi-publish2/basic/collector.py"
+  collector_settings:
+    Work Template: unreal_asset_fbx_export
+  publish_plugins:
+  - name: Publish to Shotgun
+    hook: "{self}/publish_file.py"
+    settings: {}
+  - name: Upload for review
+    hook: "{self}/upload_version.py"
+    settings: {}
+  - name: Publish to Shotgun
+    hook: "{self}/publish_file.py:{engine}/tk-multi-publish2/basic/publish_session.py"
+    settings: {}
+  - name: Publish to Shotgun
+    hook: "{self}/publish_file.py:{engine}/tk-multi-publish2/basic/publish_asset.py"
+    settings:
+        Publish Template: unreal_asset_publish
+  - name: Publish to Shotgun
+    hook: "{self}/publish_file.py:{engine}/tk-multi-publish2/basic/publish_movie.py"
+    settings:
+        Work Template: unreal_movie_render
+        Publish Template: unreal_movie_publish
+  help_url: *help_url
+  location: "@apps.tk-multi-publish2.location"
