--- a/env/includes/settings/tk-multi-loader2.yml
+++ b/env/includes/settings/tk-multi-loader2.yml
@@ -259,3 +259,23 @@ settings.tk-multi-loader2.motionbuilder:
     hierarchy: [entity, content]
   location: "@apps.tk-multi-loader2.location"
 
+# unreal
+settings.tk-multi-loader2.unreal:
+  action_mappings:
+    Motion Builder FBX: [import_content, import_level]
+    Maya FBX: [import_content]
+  actions_hook: '{engine}/tk-multi-loader2/tk-unreal_actions.py'
+  entities:
+  - caption: Current Project
+    type: Hierarchy
+    root: "{context.project}"
+    publish_filters: []
+  - caption: My Tasks
+    type: Query
+    entity_type: Task
+    filters:
+    - [project, is, '{context.project}']
+    - [task_assignees, is, '{context.user}']
+    hierarchy: [entity, content]
+  publish_filters: [["sg_status_list", "is_not", null]]
+  location: "@apps.tk-multi-loader2.location"
