--- a/env/includes/settings/tk-multi-publish2.yml
+++ b/env/includes/settings/tk-multi-publish2.yml
@@ -160,7 +160,7 @@ settings.tk-multi-publish2.mari.asset_step:
 
 # asset step
 settings.tk-multi-publish2.maya.asset_step:
-  collector: "{self}/collector.py:{engine}/tk-multi-publish2/basic/collector.py"
+  collector: "{self}/collector.py:{config}/tk-multi-publish2/tk-maya/basic/collector.py"
   collector_settings:
       Work Template: maya_asset_work
   publish_plugins:
@@ -182,7 +182,7 @@ settings.tk-multi-publish2.maya.asset_step:
     settings:
         Work Template: maya_asset_fbx_export
         Publish Template: maya_asset_fbx_publish
-  - name: Render Turntable in UE4
+  - name: Publish and Submit for Review
     hook: "{self}/publish_file.py:{config}/tk-multi-publish2/tk-maya/basic/publish_turntable.py"
     settings:
         Work Template: maya_ue4_turntable_render
@@ -416,11 +416,11 @@ settings.tk-multi-publish2.unreal.project:
   - name: Publish to Shotgun
     hook: "{self}/publish_file.py:{engine}/tk-multi-publish2/basic/publish_session.py"
     settings: {}
-  - name: Publish to Shotgun
+  - name: Export FBX and Publish to Shotgun
     hook: "{self}/publish_file.py:{engine}/tk-multi-publish2/basic/publish_asset.py"
     settings:
         Publish Template: unreal_asset_publish
-  - name: Publish to Shotgun
+  - name: Render Movie and Submit for Review
     hook: "{self}/publish_file.py:{engine}/tk-multi-publish2/basic/publish_movie.py"
     settings:
         Work Template: unreal_movie_render
