--- a/env/includes/settings/tk-desktop.yml
+++ b/env/includes/settings/tk-desktop.yml
@@ -47,6 +47,7 @@ settings.tk-desktop.project:
     - "*Motion*"
     - "*Nuke*"
     - "*Photoshop*"
+    - "*Unreal*"
     name: Creative Tools
   - matches:
     - "*Hiero*"
