--- a/env/includes/settings/tk-multi-loader2.yml
+++ b/env/includes/settings/tk-multi-loader2.yml
@@ -266,10 +266,16 @@ settings.tk-multi-loader2.unreal:
     Maya FBX: [import_content]
   actions_hook: '{engine}/tk-multi-loader2/tk-unreal_actions.py'
   entities:
-  - caption: Current Project
-    type: Hierarchy
-    root: "{context.project}"
-    publish_filters: []
+  - caption: Assets
+    entity_type: Asset
+    filters:
+    - [project, is, '{context.project}']
+    hierarchy: [sg_asset_type, code]
+  - caption: Shots
+    entity_type: Shot
+    filters:
+    - [project, is, '{context.project}']
+    hierarchy: [sg_sequence, code]
   - caption: My Tasks
     type: Query
     entity_type: Task
