--- a/env/includes/settings/tk-unreal.yml
+++ b/env/includes/settings/tk-unreal.yml
@@ -21,6 +21,19 @@ includes:
 
 ################################################################################
 
+# asset_step
+settings.tk-unreal.asset_step:
+  apps:
+    tk-multi-about:
+      location: "@apps.tk-multi-about.location"
+    tk-multi-pythonconsole:
+      location: "@apps.tk-multi-pythonconsole.location"
+  location: "@engines.tk-unreal.location"
+  menu_favourites: []
+  run_at_startup: []
+  launch_builtin_plugins: [basic]
+  automatic_context_switch: false
+
 # project
 settings.tk-unreal.project:
   apps:
@@ -28,6 +41,8 @@ settings.tk-unreal.project:
       location: "@apps.tk-multi-about.location"
     tk-multi-loader2: "@settings.tk-multi-loader2.unreal"
     tk-multi-publish2: "@settings.tk-multi-publish2.unreal.project"
+    tk-multi-pythonconsole:
+      location: "@apps.tk-multi-pythonconsole.location"
     tk-multi-shotgunpanel: "@settings.tk-multi-shotgunpanel.unreal"
   location: "@engines.tk-unreal.location"
   menu_favourites: []
