Updated to use https git locations to remove requirement for ssh keys

--- a/env/includes/engine_locations.yml
+++ b/env/includes/engine_locations.yml
@@ -82,7 +82,7 @@ engines.tk-shotgun.location:
 # Unreal
 engines.tk-unreal.location:
   type: git_branch
-  path: git@github.com:shotgunsoftware/tk-unreal
+  path: https://github.com/shotgunsoftware/tk-unreal.git
   branch: master
   version: e589cdfe37b7eee89328920c26f913617d4ef5a3
 
