--- a/env/includes/frameworks.yml
+++ b/env/includes/frameworks.yml
@@ -59,6 +59,6 @@ frameworks:
   tk-framework-unrealqt_v1.x.x:
     location:
       type: git_branch
-      path: git@github.com:shotgunsoftware/tk-framework-unrealqt
+      path: https://github.com/shotgunsoftware/tk-framework-unrealqt.git
       branch: master
       version: d21ff6124a901ce018ab639cbefe8bfc67115a79
