Fixed Location Paths for New Github Ownership
Paths for tk-unreal and tk-framework-unrealqt pointed to 'shotgunsoftware' instead of 'ue4plugins'.  Also switched to use Github version tags.

--- a/env/includes/engine_locations.yml
+++ b/env/includes/engine_locations.yml
@@ -81,8 +81,6 @@ engines.tk-shotgun.location:
 
 # Unreal
 engines.tk-unreal.location:
-  type: git_branch
-  path: git@github.com:shotgunsoftware/tk-unreal
-  branch: master
-  version: e589cdfe37b7eee89328920c26f913617d4ef5a3
-
+  type: git
+  path: https://github.com/ue4plugins/tk-unreal.git
+  version: v1.0.0
