--- a/env/includes/frameworks.yml
+++ b/env/includes/frameworks.yml
@@ -58,7 +58,6 @@ frameworks:
   # unrealqt - PySide build for Unreal (Windows-only)
   tk-framework-unrealqt_v1.x.x:
     location:
-      type: git_branch
-      path: git@github.com:shotgunsoftware/tk-framework-unrealqt
-      branch: master
-      version: d21ff6124a901ce018ab639cbefe8bfc67115a79
+      type: git
+      path: https://github.com/ue4plugins/tk-framework-unrealqt.git
+      version: v1.0.0
