--- a/env/includes/frameworks.yml
+++ b/env/includes/frameworks.yml
@@ -17,21 +17,21 @@ frameworks:
   # adminui - provides GUIs for administrative commands
   tk-framework-adminui_v0.x.x:
     location:
-      version: v0.5.2
+      version: v0.6.1
       type: app_store
       name: tk-framework-adminui
 
   # desktopserver - provides a server to run local commands.
   tk-framework-desktopserver_v1.x.x:
     location:
-      version: v1.3.7
+      version: v1.4.4
       type: app_store
       name: tk-framework-desktopserver
 
   # qtwidgets - collection of Toolkit related QT Widgets
   tk-framework-qtwidgets_v2.x.x:
     location:
-      version: v2.8.3
+      version: v2.9.4
       type: app_store
       name: tk-framework-qtwidgets
   # shotgunutils v4 - Shotgun Related Utilities
@@ -44,14 +44,21 @@ frameworks:
   # shotgunutils v5 - Shotgun Related Utilities
   tk-framework-shotgunutils_v5.x.x:
     location:
-      version: v5.6.1
+      version: v5.7.8
       type: app_store
       name: tk-framework-shotgunutils
 
   # widget - QT Widget Framework for Tank Apps (qtwidgets fw predecessor)
   tk-framework-widget_v0.2.x:
     location:
-      version: v0.2.7
+      version: v0.2.8
+      type: app_store
+      name: tk-framework-widget
+
+# widget v1 - QT Widget Framework for Tank Apps (qtwidgets fw predecessor)
+  tk-framework-widget_v1.x.x:
+    location:
+      version: v1.0.0
       type: app_store
       name: tk-framework-widget
 
@@ -61,4 +68,4 @@ frameworks:
       type: github_release
       organization: ue4plugins
       repository: tk-framework-unrealqt
-      version: v1.0.0
+      version: v1.1.0
