--- a/hooks/tk-multi-publish2/tk-maya/unreal/resources/4.26/turntable/turntable.uproject
+++ b/hooks/tk-multi-publish2/tk-maya/unreal/resources/4.26/turntable/turntable.uproject
@@ -12,6 +12,17 @@
 		{
 			"Name": "EditorScriptingUtilities",
 			"Enabled": true
+		},
+		{
+			"Name": "MovieRenderPipeline",
+			"Enabled": true
+		},
+		{
+			"Name": "AppleProResMedia",
+			"Enabled": true,
+			"SupportedTargetPlatforms": [
+				"Win64"
+			]
 		}
 	]
 }
