--- a/core/templates.yml
+++ b/core/templates.yml
@@ -20,7 +20,7 @@
 # this file. For more information, see the Shotgun Pipeline Toolkit Documentation.
 
 
-
+include: ../env/includes/unreal/templates.yml
 #
 # The keys section contains the definitions for all the different keys that are being
 # used by Sgtk. A key is a magic token that is replaced by a value at runtime, for example
@@ -139,30 +139,6 @@ keys:
         default: ma
         alias: extension
 
-    # These are used by the Loader in Unreal
-    sg_asset_type_ue4:
-        type: str
-        shotgun_entity_type: Asset
-        shotgun_field_name: sg_asset_type
-    sg_asset_name:
-        type: str
-        shotgun_entity_type: Asset
-        shotgun_field_name: code
-    sg_shot_name:
-        type: str
-        shotgun_entity_type: Shot
-        shotgun_field_name: code
-    sg_sequence_name:
-        type: str
-        shotgun_entity_type: Shot
-        shotgun_field_name: sg_sequence
-
-    # These are used by the Movie Publish in Unreal
-    level_sequence:
-        type: str
-    world:
-        type: str
-
     # needed by the Alias import as reference functionality
     alias.extension:
         type: str
@@ -186,12 +162,7 @@ keys:
         type: sequence
         format_spec: "05"
         alias: SEQ
-    # Movie extension for UE, avi on Windows, mov on other platforms
-    ue_mov_ext:
-        type: str
-        choices:
-            mov: Quicktime Movie (.mov)
-            avi: Audio Video Interleaved (.avi)
+
 
 #
 # The paths section contains all the the key locations where files are to be stored
@@ -455,16 +426,6 @@ paths:
     hiero_render_path:
         definition: 'sequences/{Sequence}/{Shot}/editorial/{YYYY}_{MM}_{DD}/renders/{project}_{Shot}.{SEQ}.dpx'
 
-    #
-    # Unreal
-    #
-
-    # level sequence review output from unreal
-    unreal_movie_publish:
-        definition: '[sequences/{Sequence}/][{Shot}/]editorial/{YYYY}_{MM}_{DD}/unreal/{level_sequence}_{world}.v{version}.{ue_mov_ext}'
-    unreal_shot_publish:
-        definition: '@shot_root/publish/unreal/{name}.v{version}.nk'
-
     ##########################################################################################
     # Asset pipeline
 
@@ -546,14 +507,6 @@ paths:
     # The location of published maya files
     maya_asset_publish:
         definition: '@asset_root/publish/maya/{name}.v{version}.{maya_extension}'
-    # The location of FBX exports for Unreal
-    maya_asset_fbx_publish:
-        definition: '@asset_root/publish/fbx/{name}.v{version}.fbx'
-    # The location of turntable review output rendered in Unreal
-    maya_ue4_turntable_render:
-        definition: '@asset_root/work/images/{name}_turntable_v{version}.{ue_mov_ext}'
-    maya_ue4_turntable_publish:
-        definition: '@asset_root/review/{Asset}_{name}_turntable_v{version}.{ue_mov_ext}'
 
 
     #
@@ -738,15 +691,6 @@ paths:
     vred_asset_render_sequence_publish:
         definition: '@asset_root/publish/images/{name}/v{version}/{Asset}_{name}_v{version}[-{vred.render_pass}]-{vred.frame}.{vred.render_extension}'
 
-    #
-    # Unreal
-    #
-
-    # Placeholder location for static mesh assets exported from Unreal
-    # Hook implementation intended to be a starting point for a pipeline
-    # No context info used in template, developers expected to further customize
-    unreal_asset_publish:
-        definition: 'assets/unrealdemo/exports/{YYYY}_{MM}_{DD}/{name}.fbx'
 
 #
 # The strings section is similar to the paths section - but rather than defining paths
@@ -770,13 +714,3 @@ strings:
 
     # define how new Mari projects should be named
     mari_asset_project_name: "{mari.project_name} - Asset {asset_name}, {task_name}"
-
-    # entity-specific templates for importing files into the Unreal content browser
-    # template logic is defined in Python, not settings:
-    # tk-unreal/hooks/tk-multi-loader2/tk-unreal_actions.py
-    unreal_loader_asset_path: "/Game/Assets/{sg_asset_type_ue4}/{sg_asset_name}/"
-    unreal_loader_asset_name: "{sg_asset_name}_{name}"
-    unreal_loader_shot_path: "/Game/Cinematics/Sequences/{sg_sequence_name}/{sg_shot_name}/"
-    unreal_loader_shot_name: "{sg_shot_name}_{name}"
-    unreal_loader_project_path: "/Game/Assets/"
-    unreal_loader_project_name: "{name}"
