--- a/env/includes/frameworks.yml
+++ b/env/includes/frameworks.yml
@@ -60,13 +60,6 @@ frameworks:
       version: v1.1.0
       type: app_store
       name: tk-framework-widget
-  # unrealqt - PySide build for Unreal (Windows-only)
-  tk-framework-unrealqt_v1.x.x:
-    location:
-      type: github_release
-      organization: ue4plugins
-      repository: tk-framework-unrealqt
-      version: v1.1.0
   tk-framework-desktopclient_v0.x.x:
     location:
       version: v0.3.0
@@ -77,3 +70,5 @@ frameworks:
       version: v0.2.0
       type: app_store
       name: tk-framework-lmv
+
+include: unreal/frameworks.yml
