--- a/env/includes/settings/tk-multi-loader2.yml
+++ b/env/includes/settings/tk-multi-loader2.yml
@@ -12,6 +12,7 @@
 
 includes:
 - ../app_locations.yml
+- ../unreal/settings/tk-multi-loader2.yml
 
 ################################################################################
 
@@ -316,31 +317,7 @@ settings.tk-multi-loader2.motionbuilder:
   location: "@apps.tk-multi-loader2.location"
 
 # unreal
-settings.tk-multi-loader2.unreal:
-  action_mappings:
-    Motion Builder FBX: [import_content, import_level]
-    Maya FBX: [import_content]
-  actions_hook: '{engine}/tk-multi-loader2/tk-unreal_actions.py'
-  entities:
-  - caption: Assets
-    entity_type: Asset
-    filters:
-    - [project, is, '{context.project}']
-    hierarchy: [sg_asset_type, code]
-  - caption: Shots
-    entity_type: Shot
-    filters:
-    - [project, is, '{context.project}']
-    hierarchy: [sg_sequence, code]
-  - caption: My Tasks
-    type: Query
-    entity_type: Task
-    filters:
-    - [project, is, '{context.project}']
-    - [task_assignees, is, '{context.user}']
-    hierarchy: [entity, content]
-  publish_filters: [["sg_status_list", "is_not", null]]
-  location: "@apps.tk-multi-loader2.location"
+settings.tk-multi-loader2.unreal: "@settings.tk-multi-loader2.unreal"
 
 # alias
 settings.tk-multi-loader2.alias:
