--- a/env/includes/settings/tk-multi-loader2.yml
+++ b/env/includes/settings/tk-multi-loader2.yml
@@ -124,9 +124,11 @@ settings.tk-multi-loader2.maya:
     Alembic Cache: [reference, import]
     Image: [texture_node, image_plane]
     Maya Scene: [reference, import]
+    Maya FBX: [reference, import]
     Photoshop Image: [texture_node, image_plane]
     Rendered Image: [texture_node, image_plane]
     Texture: [texture_node, image_plane]
+    Unreal FBX: [reference, import]
   entities:
   - caption: Assets
     entity_type: Asset
