--- a/env/includes/unreal/settings/tk-multi-shotgunpanel.yml
+++ b/env/includes/unreal/settings/tk-multi-shotgunpanel.yml
@@ -7,7 +7,11 @@ includes:
 
 settings.tk-multi-shotgunpanel.unreal:
   actions_hook: '{self}/general_actions.py:{engine}/tk-multi-shotgunpanel/tk-unreal_actions.py'
-  action_mappings: {}
-  enable_context_switch: true
+  action_mappings:
+    PublishedFile:
+    - actions: [publish_clipboard]
+      filters: {}
+  # Disable context switching since we only have a Project context.
+  enable_context_switch: false
   location: "@apps.tk-multi-shotgunpanel.location"
 
