Default2 updates and polishes (#8)
* Updated tk-alias to v2.0.7
Release notes: https://github.com/shotgunsoftware/tk-alias/wiki/Release-Notes#v207

* Updated tk-framework-aliastranslations to v0.1.1
Release notes: https://github.com/shotgunsoftware/tk-framework-aliastranslations/wiki/Release-Notes#v011

* [SHOT-2919-3514-3515] Integrate tk-framework-lmv into tk-config-default2 (#86)

* add the "Create 2D/3D Version for Review" publish plugin for Alias engine (and add the framework for it to work correctly)
* add missing blank line at the end of the file

* Update software_paths.yml

* Updated tk-core to v0.19.16
Release notes: https://github.com/shotgunsoftware/tk-core/wiki/Release-Notes#v01916

* Updated tk-multi-pythonconsole to v1.2.4
Release notes: https://github.com/shotgunsoftware/tk-multi-pythonconsole/wiki/Release-Notes#v124

* Updated tk-framework-shotgunutils to v5.7.7
Release notes: https://github.com/shotgunsoftware/tk-framework-shotgunutils/wiki/Release-Notes#v577

* Updated tk-multi-about to v0.3.2
Release notes: https://github.com/shotgunsoftware/tk-multi-about/wiki/Release-Notes#v032

* Updated tk-multi-breakdown to v1.7.2
Release notes: https://github.com/shotgunsoftware/tk-multi-breakdown/wiki/Release-Notes#v172

* Update frameworks.yml to include latest version v1.0.0 for tk-framework-widget. (#87)

* Updated tk-nuke to v0.12.8
Release notes: https://github.com/shotgunsoftware/tk-nuke/wiki/Release-Notes#v0128

* Updated tk-vred to v2.0.7
Release notes: https://github.com/shotgunsoftware/tk-vred/wiki/Release-Notes#v207

* Updated tk-multi-workfiles2 to v0.12.4
Release notes: https://github.com/shotgunsoftware/tk-multi-workfiles2/wiki/Release-Notes#v0124

* Updated tk-multi-workfiles2 to v0.12.5
Release notes: https://github.com/shotgunsoftware/tk-multi-workfiles2/wiki/Release-Notes#v0125

* SHOT-3543 Introduce Review with VRED into config (#92)

* Initial work on SHOT-3543

* Working version but need to

--- a/env/includes/settings/tk-multi-publish2.yml
+++ b/env/includes/settings/tk-multi-publish2.yml
@@ -503,10 +503,10 @@ settings.tk-multi-publish2.alias.asset_step:
      hook: "{self}/publish_file.py:{engine}/tk-multi-publish2/basic/publish_session.py"
      settings:
        Publish Template: alias_asset_publish
-   - name: Create 3D Version for Review
+   - name: Create Version for Review
      hook: "{self}/upload_version.py:{engine}/tk-multi-publish2/basic/upload_version.py"
      settings:
-       3D Version: True
+       Version Type: 2D Version
    - name: Publish CATPart to ShotGrid
      hook: "{self}/publish_file.py:{engine}/tk-multi-publish2/basic/publish_translation.py"
      settings:
@@ -544,10 +544,10 @@ settings.tk-multi-publish2.vred.asset_step:
      hook: "{self}/publish_file.py:{engine}/tk-multi-publish2/basic/publish_session.py"
      settings:
        Publish Template: vred_asset_publish
-   - name: Create 2D Version for Review
+   - name: Create Version for Review
      hook: "{self}/upload_version.py:{engine}/tk-multi-publish2/basic/upload_session_version.py"
      settings:
-       3D Version: False
+       Version Type: 2D Version
    - name: Publish Rendering to ShotGrid
      hook: "{self}/publish_file.py:{engine}/tk-multi-publish2/basic/publish_rendering.py"
      settings:
