--- a/env/includes/app_locations.yml
+++ b/env/includes/app_locations.yml
@@ -28,6 +28,10 @@ apps.tk-multi-breakdown.location:
   type: app_store
   name: tk-multi-breakdown
   version: v1.8.1
+apps.tk-multi-breakdown2.location:
+  type: app_store
+  name: tk-multi-breakdown2
+  version: v0.2.3
 apps.tk-multi-demo.location:
   type: app_store
   name: tk-multi-demo
@@ -95,7 +99,7 @@ apps.tk-shotgun-launchvredreview.location:
 apps.tk-hiero-export.location:
   type: app_store
   name: tk-hiero-export
-  version: v0.7.1
+  version: v0.7.2
 apps.tk-hiero-openinshotgun.location:
   type: app_store
   name: tk-hiero-openinshotgun
