--- a/env/includes/settings/tk-alias.yml
+++ b/env/includes/settings/tk-alias.yml
@@ -14,11 +14,10 @@
 includes:
 - ../app_locations.yml
 - ../engine_locations.yml
-- ./tk-multi-breakdown.yml
+- ./tk-multi-breakdown2.yml
 - ./tk-multi-loader2.yml
 - ./tk-multi-publish2.yml
 - ./tk-multi-shotgunpanel.yml
-- ./tk-multi-snapshot.yml
 - ./tk-multi-workfiles2.yml
 
 ################################################################################
@@ -43,16 +42,14 @@ settings.tk-alias.asset_step:
       location: "@apps.tk-multi-about.location"
     tk-multi-pythonconsole:
       location: "@apps.tk-multi-pythonconsole.location"
-    tk-multi-breakdown: "@settings.tk-multi-breakdown.alias"
+    tk-multi-breakdown2: "@settings.tk-multi-breakdown2.alias"
     tk-multi-loader2: "@settings.tk-multi-loader2.alias"
     tk-multi-publish2: "@settings.tk-multi-publish2.alias.asset_step"
     tk-multi-shotgunpanel: "@settings.tk-multi-shotgunpanel.alias"
-    tk-multi-snapshot: "@settings.tk-multi-snapshot.alias.asset_step"
     tk-multi-workfiles2: "@settings.tk-multi-workfiles2.alias.asset_step"
   reference_template: alias_asset_reference_publish
   menu_favourites:
   - {app_instance: tk-multi-workfiles2, name: File Open...}
-  - {app_instance: tk-multi-snapshot, name: Snapshot...}
   - {app_instance: tk-multi-workfiles2, name: File Save...}
   - {app_instance: tk-multi-publish2, name: Publish...}
   location: "@engines.tk-alias.location"
