--- a/env/includes/unreal/frameworks.yml
+++ b/env/includes/unreal/frameworks.yml
@@ -7,6 +7,9 @@ frameworks:
     tk-framework-unrealqt_v1.x.x:
       location:
         version: v1.2.8
-        type: git
-        path: git@github.com:GPLgithub/tk-framework-unrealqt.git
+#        type: git
+#        path: git@github.com:GPLgithub/tk-framework-unrealqt.git
 #        path: git@github.com:ue4plugins/tk-framework-unrealqt.git
+        type: github_release
+        organization: GPLgithub
+        repository: tk-framework-unrealqt
