For #8724, updated tk-framework-unrealqt desriptor.

--- a/env/includes/unreal/frameworks.yml
+++ b/env/includes/unreal/frameworks.yml
@@ -6,10 +6,8 @@
 frameworks:
     tk-framework-unrealqt_v1.x.x:
       location:
-        version: v1.2.8
-#        type: git
-#        path: git@github.com:GPLgithub/tk-framework-unrealqt.git
-#        path: git@github.com:ue4plugins/tk-framework-unrealqt.git
+        version: v1.3.0
         type: github_release
         organization: GPLgithub
+        # organization: ue4plugins
         repository: tk-framework-unrealqt
